# ComfyUI-faster-whisper

./: LICENSE  README.md  __init__.py  nodes.py  pyproject.toml  requirements.txt  subtitle_utils.py  test.py  tokenizer_constant.py
utils/: path_utils.py  subtitle_utils.py
workflows/: faster_whisper_suttitle.json
