[project]
name = "comfyui-faster-whisper"
description = "Nodes to use [a/faster-whisper](https://github.com/SYSTRAN/faster-whisper) for transcription."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["faster-whisper==1.0.3", "soundfile"]

[project.urls]
Repository = "https://github.com/jhj0517/ComfyUI-faster-whisper"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jhj0517"
DisplayName = "ComfyUI-faster-whisper"
Icon = ""
